--- a/Config.json
+++ b/Config.json
@@ -4,7 +4,8 @@
 
         "secretKey": "1905030928308823492934823480239401208203825309",
         "port": 5000,
-        "debug": true
+        "debug": true,
+        "whisperSize": "base"
 
     },
 
