--- a/Config.json
+++ b/Config.json
@@ -3,10 +3,14 @@
     "AppConfig": {
 
         "secretKey": "1905030928308823492934823480239401208203825309",
-        "port": 5000,
+        "sttPort": 5000,
+        "inferencePort": 8000,
+        "uiPort": 8000,
+
+
         "debug": true,
-        "whisperSize": "base",
-        "temporalSaveRoute": "C:/Users/Terro/Documents/TempFiles/"
+        "temporalSaveRoute": "C:/Users/Terro/Documents/TempFiles/",
+        "modelNameOrPath": "OpenAssistant/stablelm-7b-sft-v7-epoch-3"
 
     },
 
